[package]
name = "example-rust-project"
version = "1.0.0"
description = ""
authors = ["evictedcucumber"]
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.59", features = ["derive"] }
thiserror = "2.0.18"

[lints.rust]
warnings = "deny"
unused = "deny"
rust_2018_idioms = "deny"

[lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"
