[package]
name = "watchlist"
version = "1.0.0"
description = "A rust application for organising a personal watchlist."
authors = ["evictedcucumber"]
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.59", features = ["derive"] }
egui = "0.33.3"
thiserror = "2.0.18"

[lints.rust]
warnings = "deny"
unused = "deny"
rust_2018_idioms = "deny"

[lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"
